--- a/styles/style.css
+++ b/styles/style.css
@@ -185,7 +185,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
 }
 
