--- a/styles/style.css
+++ b/styles/style.css
@@ -20,11 +20,13 @@
   max-height: 756px;
 }
 
-
-.logo_place_heager {
-  position: absolute;
+.logo {
   width: 228px;
   height: 32px;
+}
+
+.logo__place_header {
+  position: absolute;
   top: 30px;
   left: 64px;
 }
@@ -135,6 +137,7 @@
   font-size: 60px;
   font-weight: 600;
   text-align: center;
+  z-index: 1;
 }
 
 .section-subtitle {
@@ -145,6 +148,7 @@
   margin-top: 20px;
   margin-bottom: 0;
   text-align: center;
+  z-index: 1;
 }
 
 
@@ -153,11 +157,15 @@
   flex-wrap: wrap;
   width: 1100px;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
 }
 
 .table__cell {
   width: 250px;
   margin-top: 60px;
+  list-style-type: none;
+  z-index: 1;
 }
 
 .table__heading {
@@ -226,6 +234,7 @@
   height: 637px;
   left: 0;
   bottom: 0;
+  z-index: 0;
 }
 
 .kaufman {
@@ -241,19 +250,16 @@
 
 .section-title_theme_dark, .section-subtitle_theme_dark {
   color: white;
-  z-index: 1;
 }
 
 
 .table_theme_dark {
   background-color: #1f1f1f;
-  z-index: 1;
 }
 
 .table__cell_theme_dark {
   width: 200px;
   margin-top: 80px;
-  z-index: 1;
 }
 
 .table__heading_theme_dark, .table__text_theme_dark {
@@ -266,6 +272,8 @@
   right: -210px;
   width: 877px;
   height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: cover;
 }
 
 .footer {
@@ -293,10 +301,6 @@
   justify-content: space-between;
 }
 
-.logo_place_footer {
-  width: 228px;
-  height: 32px;
-}
 
 .footer__author {
   line-height: 25px;
