--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-sizing: border-box;
   min-height: 890px;
   background-color: #f2f2f2;
   padding-top: 100px;
