--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -1,8 +1,6 @@
 .resources__link {
-  display: block;
   text-align: center;
-  width: 270px;
-  height: 38px;
+  line-height: 0;
   transition: opacity 0.4s ease-in;
 }
 
